# GeoRd

./: .clang-format  .gitignore  CMakeLists.txt  Graph.h  MPI.h  Octree.h  Point.h  README.md  main.cpp  redis.h
include/: CMakeLists.txt  GeoRd.h  Graph.h  MPI.h  Mesh.h  Octree.h  Point.h  Redist.h  redis.h  utils.h
test/: TestGraph.h  TestMPI.h  TestMesh.h  config.make  gtest-mpi-listener.h  makefile  test.cpp
